--- a/style.css
+++ b/style.css
@@ -1,1 +1,106 @@
+/**
+ * Assignment 1
+ **/
 
+* {
+  box-sizing: border-box;
+  text-align: center;
+}
+
+body {background-color: #777777;
+  margin-left: 12.037037037%;
+  margin-right: 14.737654321%;
+  margin-top: 1%;
+}
+
+header {
+  margin-bottom: 1.375515818%;
+  line-height: 522.22222%;
+  color: #777777;
+  background: #EBEBEB;
+  font-size: 18px; font-family:Arial, Helvetica, sans-serif;
+}
+
+nav {
+  margin-bottom: 2.751031636%;
+  line-height: 522.22222%;
+  color: #777777;
+  background: #EBEBEB;
+  font-size: 18px; font-family:Arial, Helvetica, sans-serif;
+}
+
+section {
+    color: #777777;
+    background: #EBEBEB;
+    margin-right: 1.7003703%;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    width: 55.1%;
+  }
+
+#left {
+    line-height: 82px;
+    float: left;
+    font-size: 18px; font-family:Arial, Helvetica, sans-serif;
+  }
+
+#left2 {
+    line-height: 350%;
+    width: 96.1165%;
+    margin-left: 1.94175%;
+    margin-right: 1.94175%;
+    background: #777777;
+    color: #EBEBEB;
+    padding-bottom: 10px;
+  }
+
+#left3 {
+    line-height: 300%;
+    font-weight: bold;
+    background: #EBEBEB;
+    color: #777777;
+    padding-top: 1.357%;
+    padding-bottom: 1.357%;
+    border-left: 1%;
+    border-right: 1%;
+    border-bottom: 1%;
+    margin-left: 2.8835%;
+    margin-right: 4%;
+    margin-bottom: 2%;
+    border-color: #777777;
+  }
+
+#left4 {
+    line-height: 300%;
+    background: #EBEBEB;
+    color: #777777;
+    padding-top: 1.357%;
+    padding-bottom: 1.357%;
+    border-left: 1%;
+    border-right: 1%;
+    margin-left: 2.8835%;
+    margin-right: 4%;
+    margin-bottom: 1%;
+    border-color: #777777;
+  }
+
+
+aside {
+    line-height: 82px;
+    color: #777777;
+    background: #EBEBEB;
+    padding-bottom: 207px;
+    float: left;
+    width: 43.2%;
+    font-size: 18px; font-family:Arial, Helvetica, sans-serif;
+  }
+
+
+  footer {
+    clear: both;
+    line-height: 522.22222%;
+    color: #777777;
+    background: #EBEBEB;
+    font-size: 18px; font-family:Arial, Helvetica, sans-serif;
+    width: 100%;
+  }
